@@ -55,7 +55,7 @@
     "gecko": {
       "id": "pswitcher2@dillinger",
       "strict_min_version": "115.0",
-      "strict_max_version": "127.*"
+      "strict_max_version": "128.*"
     }
   },
   "icons": {
